Radar graph added. Also fixed some alignment issues.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -30,6 +30,7 @@ nav {
   }
 
   .nav-wrapper {
+    margin-left: 20px;
     .input-field {
       height: 0;
       input[type=search] {
@@ -52,6 +53,7 @@ nav {
   box-shadow: @box-shadow-default;
   position: relative;
   background-color: @left-sidebar-background;
+  padding-bottom: 19px;
 
   ul {
     margin: 0;
@@ -135,6 +137,7 @@ nav {
 .main-table {
   margin: 20px;
   padding: 15px;
+  padding-bottom: 23px;
   background-color: @left-sidebar-background;
   height: auto;
   width: auto;
@@ -161,6 +164,7 @@ nav {
   width: auto;
   background-color: @right-sidebar-background;
   padding: 20px;
+  padding-bottom: 0;
   box-shadow: @box-shadow-default;
 
   img {
@@ -189,9 +193,8 @@ nav {
       }
     }
   }
-
-  #radar{
-    width: auto;
-    height: 200px;
-  }
+  // #radarChart {
+  //   width: auto !important;
+  //   height: 250px !important;
+  // }
 }
